# rust-api-priduct

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
migrations/2024-07-08-091306_init/: up.sql
migrations/2024-07-08-093332_create_profiles/: up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  users.rs
src/controllers/: hello_controller.rs  mod.rs  user_controller.rs
src/models/: user.rs
src/notinuse/: __users.rs
src/repositories/: user_repository.rs
src/services/: hello_service.rs  mod.rs  user_service.rs
