[package]
name = "new_rust_product"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
dotenv = "0.15"
r2d2 = "0.8"
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
cargo-watch = "8.1.2"